# MyApplication

./: README.md  build.gradle  index.android.js  local.properties  package.json  settings.gradle
app/: AppKey.jks  AppKey.keystore  CMakeLists.txt  build.gradle
app/libs/: mylibrary-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: BlackFantacy.skin  index.android.bundle  webintent.html
app/src/main/assets/harr/: haarcascade_frontalcatface_extended.xml
app/src/main/assets/jsbridge/: index.html
app/src/main/assets/skin/: WhiteSkinPackage.skin
app/src/main/assets/svg/: iron_man2_svg.txt  iron_man_svg.txt  world_map_svg.txt
app/src/main/assets/www/: cordova_plugins.js  index.html
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/res/anim/: fade_in.xml  fade_out.xml  in_fade_and_big.xml  out_fade_and_small.xml  out_to_left.xml  popup_enter_left.xml  popup_enter_right.xml  popup_exit_left.xml  popup_exit_right.xml
app/src/main/res/animator/: rotate_anim_listener.xml  rotate_anim_listener_reverse.xml  rotate_view_anim.xml
app/src/main/res/color/: menu_item_selector.xml
app/src/main/res/drawable/: divider_bg.xml  item_bg.xml  nonecolor.xml  (+7 more)
app/src/main/res/drawable-v21/: check_box_selector.xml  dialog_background.xml  item_bg.xml  item_selector.xml  selector_button_blue.xml  selector_button_white.xml
app/src/main/res/drawable-xhdpi/: float_popup_background_left.xml  seek_bar_progress_drawable.xml  seekbar_progress.xml  seekbar_progress_background.xml
app/src/main/res/drawable-xxhdpi/: login_text_input_line_selector.xml
(+576 files in other folders)
